# stock-analysis-mcp

./: .gitignore  .pre-commit-config.yaml  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  config.json  config_manager.py  main.py  portfolios.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_config.py  test_main.py
